# replicate_polymer_topology

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
TMP_PABORRAR/: requirements.txt
create_lammps_from_gromacs/: __init__.py  create_lammps_from_gromacs.py
create_lammps_from_gromacs_lib/: parse_arguments.py
create_library_monomer/: __init__.py  create_library_monomer.py
create_library_monomer_lib/: extract_gromacs_parameters.py  extract_itp_parameters.py  extract_residues_from_itp.py  get_all_ff_for_residues.py  gromacs_template.py  parse_arguments.py
doc/: Example_exclusions.md  P4HB_trimer.odg  example01.md  example02.md  example03.md  example04.md  example05.md  example06.md  example07.md  features  installation.md  intro.md  overview.md
examples/: .gitignore  01-run_all_examples.sh  minim_template.mdp
forcefields/: ff.xsd  loplsaa.xml  loplsaa_AMester.xml  oplsaa.xml  oplsaa_AM.xml  oplsaa_pla.xml  trappe-ua.xml  trappe-ua.xml_backup.xml  trappe-ua_PEToxvaerd.xml
remove_hydrogens/: __init__.py  remove_hydrogens.py
remove_hydrogens_lib/: parse_arguments.py
replicate_polymer/: __init__.py  mdtrajtest.py  replicate_polymer.py
replicate_polymer_lib/: check_connect_pdb.py  exclusions.py  insert_impropers_top_gromacs.py  insert_nonopenmm_ff_terms.py  logger.py  parse_arguments.py  prepare_lammps.py  remove_hydrogens.py  replicate_pdb.py  setup_chiral_impropers.py  typing_molecule.py
tests/: 01-test_check_connect_pdb.py  02-test_remove_hydrogen.py  03-test_setup_chiral_impropers.py  04-test_examples.py  05-test_create_polyply.py  (+5 more)
(+608 files in other folders)
