[metadata]
name = replicate_polymer
version = attr: replicate_polymer.version.__version__
description = Python scipt to replicate and typing molecules for GROMACS and LAMMPS
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
packages = find:
test_suite = tests
include_package_data = true

[options.packages.find]
exclude =
    docs
    tests
    dist
    build

[options.entry_points]
console_scripts =
    replicate_polymer = replicate_polymer:main

[bdist_wheel]
universal = true