[metadata]
name = replicate_polymer
description = Python scipt to replicate and typing molecules for GROMACS and LAMMPS
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
packages = find:
test_suite = tests
include_package_data = true

[options.packages.find]
exclude =
    docs
    tests
    dist
    build

[options.package_data]
forcefields = *.xsd, *.xml

[options.entry_points]
console_scripts =
    replicate_polymer = replicate_polymer:main
    create_library_monomer = create_library_monomer:main
    create_lammps_from_gromacs = create_lammps_from_gromacs:main
    top2forcefieldxml = top2forcefieldxml:main
    remove_hydrogens = remove_hydrogens:main

[bdist_wheel]
universal = true
